--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -66,32 +66,24 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Chất Liệu
                     </a>
-
-                    <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Xẻ tà</a>
                     <a class="nav-link collapsed" id="colors" th:href="@{/admin/colors}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
                     </a>
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-
                         Xẻ tà
                     </a>
 
                     <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Lớp Lót
-
-                        Xẻ tà</a>
+                        Lớp Lót</a>
                     <a class="nav-link collapsed" id="" th:href="@{/admin/design}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Họa tiết</a>
-
                     <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}" >
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Khuyến mại
+                        Khuyến mại</a>
                     <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kích cỡ
