view khach hang admin

--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -91,6 +91,7 @@
                     <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}" >
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Khuyến mại
+                    </a>
                     <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kích cỡ
@@ -101,7 +102,10 @@
                     <a class="nav-link collapsed" id="kieutui" th:href="@{/admin/kieutui}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kiểu túi
-
+                    </a>
+                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khách Hàng
                     </a>
                 </div>
             </div>
