--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -114,6 +114,17 @@
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
 </th>
 
+<th th:fragment="khachhang_link(fieldKhachHang, columnLabel)">
+    <a style="text-decoration: none; color: black"
+       th:href="@{'/admin/customers/page/' + ${currentPage} + '?sortField=' + ${fieldKhachHang} + '&sortDir=' + ${sortField != fieldKhachHang ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+        [[${columnLabel}]]
+    </a>
+    <span th:if="${sortField == fieldKhachHang}" style="text-decoration: none; color: black"
+          th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+</th>
+
+
+
 <!-- fragment cho phân trang-->
 <a th:fragment="pagecategory_link(pageNum, label)"
    class="page-link"
@@ -137,7 +148,7 @@
 <a th:fragment="pagematerial_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/loplot/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
-<a th:fragment="page_link(pageNum, label)"
+<!--<a th:fragment="page_link(pageNum, label)"-->
 <a th:fragment="cautruckhuy_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/cautruckhuy/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}">
@@ -168,6 +179,8 @@
 <a th:fragment="pagedesign_link(pageNum, label)"
    class="page-link"
    th:href="@{'/admin/design/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
-
+<a th:fragment="pagecustomer_link(pageNum, label)"
+   class="page-link"
+   th:href="@{'/admin/customers/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword' + keyword : ''}}"> [[${label}]]</a>
    </body>
 </html>
