--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -50,7 +50,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Sản phẩm
                     </a>
-
+                    <a class="nav-link collapsed" id="productDetails" th:href="@{/admin/productDetails}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Chi tiết sản phẩm
+                    </a>
                     <a class="nav-link collapsed" id="users" th:href="@{/admin/users}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Nhân viên
