--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -54,6 +54,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Chi tiết sản phẩm
                     </a>
+                    <a class="nav-link collapsed" id="seri" th:href="@{/admin/ma-dinh-danh}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Mã định danh
+                    </a>
                     <a class="nav-link collapsed" id="users" th:href="@{/admin/users}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Nhân viên
