--- a/src/main/resources/templates/admin/chitietsanpham/product_detail_edit.html
+++ b/src/main/resources/templates/admin/chitietsanpham/product_detail_edit.html
@@ -222,7 +222,7 @@
 
                     <div class="text-center">
                         <input type="submit" value="Save" class="btn btn-primary m-3" id="submitButton"/>
-                        <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel">
+                        <a th:href="@{/admin/productDetails}" type="button" class="btn btn-secondary">Cancel</a>
                     </div>
                 </div>
             </form>
