--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <!-- animate CSS
     ============================================ -->
+
     <link rel="stylesheet" href="/assets/css/animate.css">
 
     <!-- FANCYBOX CSS
@@ -95,20 +96,9 @@
 <script src="/assets/angular/angular.js"></script>
 <script src="/assets/angular/angular-route.js"></script>
 <script src="/controller/index.js"></script>
-<!--<script src="/controller/sanpham.js"></script>-->
-<!--<script src="/controller/trangchitietsanpham.js"></script>-->
-<!--<script src="/controller/thanhtoan.js"></script>-->
-<!--<script src="/controller/service/checkoutservice.js"></script>-->
-<!--<script src="/controller/trangchu.js"></script>-->
-<!--<script src="/controller/giohang.js"></script>-->
 <script src="/controller/login.js"></script>
 <script src="/controller/register.js"></script>
-
-<!--<script src="/controller/fail.js"></script>-->
-<!--<script src="/controller/success.js"></script>-->
-<!--<script src="/controller/thongtincanhan.js"></script>-->
-<!--<script src="/controller/service/timkiemservice.js"></script>-->
-<!--<script src="/controller/history.js"></script>-->
+<script src="/controller/thongtincanhan.js"></script>
 
 
 
