--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -99,8 +99,9 @@
 <script src="/controller/login.js"></script>
 <script src="/controller/register.js"></script>
 <script src="/controller/thongtincanhan.js"></script>
-
-
+<script src="/controller/sanpham.js"></script>
+<script src="/controller/trangchitietsanpham.js"></script>
+<script src="/controller/trangchu.js"></script>
 
 <!-- fancybox js -->
 <script src="/assets/js/jquery.fancybox.js"></script>
