--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -95,6 +95,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kiểu túi
                     </a>
+                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khách Hàng
+                    </a>
                 </div>
             </div>
         </nav>
