--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -106,6 +106,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kiểu túi
                     </a>
+                    <a class="nav-link collapsed" id="don-hang" th:href="@{/admin/don-hang}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Đơn hàng
+                    </a>
                 </div>
             </div>
         </nav>
