--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -110,6 +110,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Đơn hàng
                     </a>
+                    <a class="nav-link collapsed" id="statisticals" th:href="@{/admin/statisticals}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Thống Kê
+                    </a>
                 </div>
             </div>
         </nav>
