--- a/src/main/resources/static/layout/header.html
+++ b/src/main/resources/static/layout/header.html
@@ -116,14 +116,14 @@
                 <div class="header-right-menu ">
                     <nav>
                         <ul class="list-inline" ng-if="currentUser.username == null">
-                            <li class="active"><a href="#index">TRANG CHỦ</a> </li>
+                            <li class="active"><a href="#index" style="">TRANG CHỦ</a> </li>
                              <li><a href="#">MAY ĐO ONLINE</a></li>
                             <li>
-                                <a href="#sanPham">SẢN PHẨM</a>
+                                <a href="#sanpham">SẢN PHẨM</a>
                             </li>
 
                             <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
-                            <li><a href="#cart">GIỎ HÀNG</a></li>
+                            <li><a href="#checkout">GIỎ HÀNG</a></li>
                             <li><a href="#login">ĐĂNG NHẬP</a></li>
                             <li><a href="#signup">ĐĂNG KÝ</a></li>
                         </ul>
@@ -131,12 +131,12 @@
                             <li class="active"><a href="#index">TRANG CHỦ</a> </li>
                             <li><a href="#">MAY ĐO ONLINE</a></li>
                             <li>
-                                <a href="#sanPham">SẢN PHẨM</a>
+                                <a href="#sanpham">SẢN PHẨM</a>
                             </li>
 
                             <li> <a href="#chinhSach">CHÍNH SÁCH</a></li>
                             <li><a style="cursor: pointer"  data-toggle="modal" data-target="#myModal10" >ĐĂNG XUẤT</a></li>
-                            <li><a href="#cart">GIỎ HÀNG</a></li>
+                            <li><a href="#checkout">GIỎ HÀNG</a></li>
                             <li >
                                 <ul class="dropdown" style=" list-style: none;">
                                     <li style="color: black;font-weight: bold;text-decoration: none;">TÀI KHOẢN</li>
