--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -96,12 +96,20 @@
 <script src="/assets/angular/angular.js"></script>
 <script src="/assets/angular/angular-route.js"></script>
 <script src="/controller/index.js"></script>
-<script src="/controller/login.js"></script>
-<script src="/controller/register.js"></script>
-<script src="/controller/thongtincanhan.js"></script>
 <script src="/controller/sanpham.js"></script>
 <script src="/controller/trangchitietsanpham.js"></script>
+<script src="/controller/thanhtoan.js"></script>
 <script src="/controller/trangchu.js"></script>
+<script src="/controller/giohang.js"></script>
+<script src="/controller/login.js"></script>
+<script src="/controller/register.js"></script>
+
+<script src="/controller/fail.js"></script>
+<script src="/controller/success.js"></script>
+<script src="/controller/thongtincanhan.js"></script>
+<script src="/controller/service/checkoutservice.js"></script>
+<script src="/controller/service/timkiemservice.js"></script>
+<script src="/controller/history.js"></script>
 
 <!-- fancybox js -->
 <script src="/assets/js/jquery.fancybox.js"></script>
