khach-hang-don-hang

--- a/src/main/resources/templates/userIndex.html
+++ b/src/main/resources/templates/userIndex.html
@@ -99,6 +99,7 @@
 <script src="/controller/login.js"></script>
 <script src="/controller/register.js"></script>
 <script src="/controller/thongtincanhan.js"></script>
+<script src="/controller/history.js"></script>
 
 
 
