--- a/src/main/resources/static/layout/footer.html
+++ b/src/main/resources/static/layout/footer.html
@@ -135,8 +135,16 @@
                         <h3>ĐĂNG KÝ NHẬN TIN</h3>
                         <p>Để nhận tin khuyến mãi mới nhất từ Nhà SUITS</p>
                         <div class="form-group newsletter-form-group">
-                            <input type="text" class="form-control newsletter-form" placeholder="Nhập  email của bạn" style="width: 60%">
-                            <input type="submit" class="newsletter-btn" name="submit" value="Đăng ký" style="border-radius:2px;background: rgb(142, 116, 77);float: left"/>
+                            <div class="row">
+                                <div class="col-md-8 col-sm-8 col-xs-12">
+                                    <input type="text" class="form-control newsletter-form"  style="margin-top: 12px;border: 2px solid #333"placeholder="Nhập email của bạn">
+                                </div>
+                                <div class="col-md-4 col-sm-4 col-xs-12" >
+                                    <input type="submit" class="newsletter-btn "  name="submit" value="Đăng ký">
+                                </div>
+                            </div>
+
+
                         </div>
 
                     </div>
